--- a/pages/Egipcios y gatos.html
+++ b/pages/Egipcios y gatos.html
@@ -37,7 +37,12 @@
 
     <marquee behavior="slide" direction="left">Pero no adoraban a los gatos como divinos.</marquee>
      
-    <img src="../images/egipcio.jpg" width="500" height="500"> <img src="../images/0423gatos-1162866.jpg" width="500" height="500" >
+    
+<img src="../images/egipcio.jpg" width="100%" height="auto">
+
+
+<img src="../images/0423gatos-1162866.jpg" width="100%" height="auto">
+
  
     <!-- footer-->
     <footer>
