--- a/pages/Especie más rara.html
+++ b/pages/Especie más rara.html
@@ -34,10 +34,15 @@
     <marquee behavior="slide" direction="left">plegadas hacia delante.</marquee>
 
 
+<div style="max-width: 100%; width: 100%; text-align: center;">
+  <img src="../images/Scottish-fold-3.jpg" style="max-width: 100%; height: auto;">
+</div>
 
-    <img src="../images/Scottish-fold-3.jpg" width="620" height="500">
+<div style="max-width: 100%; width: 100%; text-align: center;">
+  <img src="../gif/ClearAgreeableArmedcrab-max-1mb.gif" style="max-width: 100%; height: auto; max-height: 200px;">
+</div>
 
-    <img src="../gif/ClearAgreeableArmedcrab-max-1mb.gif" width="620" height="500">
+
  
     <!-- footer-->
     <footer>
