--- a/pages/Templo Gotokuji.html
+++ b/pages/Templo Gotokuji.html
@@ -25,15 +25,23 @@
 
     <marquee behavior="slide" direction="left">El templo Gotokuji (豪徳寺)</marquee>
 
-    <marquee behavior="slide" direction="left">se considerada que es el lugar</marquee>
+    <marquee behavior="slide" direction="left">se considerada que es el</marquee>
 
-    <marquee behavior="slide" direction="left">donde surgio el amuleto</marquee>
+    <marquee behavior="slide" direction="left">lugar donde surgio el</marquee>
 
-    <marquee behavior="slide" direction="left">maneki-neko en Tokio.</marquee>
+    <marquee behavior="slide" direction="left">amuleto maneki-neko en Tokio.</marquee>
 
     <marquee behavior="slide" direction="left">Los japoneses los respetan.</marquee>
  
-    <img src="../images/goto.jpg" width="412" height="400">  <img src="../gif/petalos.gif" width="412" height="400">  <img src="../gif/gato.gif" width="412" height="400">
+    
+
+<img src="../images/goto.jpg" style="width: 100%; height: auto;">
+
+
+<img src="../gif/petalos.gif" style="width: 100%; height: auto; max-height: 300px;">
+
+
+<img src="../gif/gato.gif" style="width: 100%; height: auto;">
 
 
 <!-- footer-->
