--- a/pages/Templo Gotokuji.html
+++ b/pages/Templo Gotokuji.html
@@ -25,11 +25,11 @@
 
     <marquee behavior="slide" direction="left">El templo Gotokuji (豪徳寺)</marquee>
 
-    <marquee behavior="slide" direction="left">se considerada que es el</marquee>
+    <marquee behavior="slide" direction="left">se considerada que es</marquee>
 
-    <marquee behavior="slide" direction="left">lugar donde surgio el</marquee>
+    <marquee behavior="slide" direction="left">donde surgio el amuleto</marquee>
 
-    <marquee behavior="slide" direction="left">amuleto maneki-neko en Tokio.</marquee>
+    <marquee behavior="slide" direction="left">maneki-neko en Tokio.</marquee>
 
     <marquee behavior="slide" direction="left">Los japoneses los respetan.</marquee>
  
