--- a/pages/Razones para adoptar uno.html
+++ b/pages/Razones para adoptar uno.html
@@ -31,13 +31,13 @@
         <marquee behavior="slide" direction="left"> 2. Transmiten calma.</marquee>
 
 
-        <marquee behavior="slide" direction="left"> 3. Mejora tu estado de ánimo.</marquee>
+        <marquee behavior="slide" direction="left"> 3. Mejora el ánimo.</marquee>
 
 
-        <marquee behavior="slide" direction="left"> 4. Obtenemos menos riesgo cardiovascular.</marquee>
+        <marquee behavior="slide" direction="left"> 4. Menos problemas cardiovasculares.</marquee>
 
 
-        <marquee behavior="slide" direction="left"> 5. Jugar con tu gato es una buena forma de activarte.</marquee>
+        <marquee behavior="slide" direction="left"> 5. Jugar con tu gato te activa.</marquee>
 
 
         <marquee behavior="slide" direction="left"> 6. Con un gato te sentirás menos solo.</marquee>
