--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       
 </header>
 
-    <img src="images/pinkcat.jpg" width="100%" height="auto">
+    <img src="images/pinkcat.jpg" style="width: 100%; height: auto; max-width: 100%; max-height: 600px;">
     
 <!-- footer-->
     <footer>
