--- a/pages/Especie más rara.html
+++ b/pages/Especie más rara.html
@@ -23,26 +23,21 @@
           <li><a href="../pages/Razones para adoptar uno.html">Adopta</a></li>
        </ul>
 
-    <h1><marquee behavior="slide" direction="left">Scottish fold</marquee></h1>
+       <div class="scrolling-text">
+       <p>Scottish fold</p>
+       </div>
 
-    <marquee behavior="slide" direction="left">Estos gatos son llamativos</marquee>
-
-
-    <marquee behavior="slide" direction="left">por sus orejas pequeñas y </marquee>
-
-
-    <marquee behavior="slide" direction="left">plegadas hacia delante.</marquee>
-
-
-<div style="max-width: 100%; width: 100%; text-align: center;">
-  <img src="../images/Scottish-fold-3.jpg" style="max-width: 100%; height: auto;">
-</div>
-
-<div style="max-width: 100%; width: 100%; text-align: center;">
-  <img src="../gif/ClearAgreeableArmedcrab-max-1mb.gif" style="max-width: 100%; height: auto; max-height: 200px;">
-</div>
+       <div class="scrolling-text">
+       <p>Estos gatos son llamativos por sus orejas pequeñas</p>
+       <p>y plegadas hacia delante.</p>
+       </div>
 
 
+
+  <img src="../images/Scottish-fold-3.jpg" style="width: 48%; height: auto; max-width: 100%; max-height: 450px;">
+
+
+  <img src="../gif/ClearAgreeableArmedcrab-max-1mb.gif" style="width: 50%; height: auto; max-width: 100%; max-height: 400px;">
  
     <!-- footer-->
     <footer>
