edite Templo Gotokuji.html

--- a/pages/Templo Gotokuji.html
+++ b/pages/Templo Gotokuji.html
@@ -23,26 +23,15 @@
           <li><a href="../pages/Razones para adoptar uno.html">Adopta</a></li>
        </ul>
 
-    <marquee behavior="slide" direction="left">El templo Gotokuji (豪徳寺)</marquee>
+       <div class="scrolling-text">
+         <p>El templo Gotokuji (豪徳寺) se considerada el lugar 
+         <p>donde surgio el amuleto "maneki-neko" en Tokio.</p>
+         <p>Los japoneses les tienen un gran respeto a estos.</p>
+       </div>
 
-    <marquee behavior="slide" direction="left">se considerada que es</marquee>
+<img src="../images/goto.jpg" style="width: 49%; height: auto; max-width: 100%; max-height: 440px;">
 
-    <marquee behavior="slide" direction="left">donde surgio el amuleto</marquee>
-
-    <marquee behavior="slide" direction="left">maneki-neko en Tokio.</marquee>
-
-    <marquee behavior="slide" direction="left">Los japoneses los respetan.</marquee>
- 
-    
-
-<img src="../images/goto.jpg" style="width: 100%; height: auto;">
-
-
-<img src="../gif/petalos.gif" style="width: 100%; height: auto; max-height: 300px;">
-
-
-<img src="../gif/gato.gif" style="width: 100%; height: auto;">
-
+<img src="../gif/petalos.gif" style="width: 49%; height: auto; max-width: 100%; max-height: 440px;">
 
 <!-- footer-->
  <footer>
