edit Egipcios y gatos.html

--- a/pages/Egipcios y gatos.html
+++ b/pages/Egipcios y gatos.html
@@ -27,9 +27,11 @@
     </nav>
     
     <div class="scrolling-text">
-      <p>Creian que estos tenian fertilidad,rapidez y gracia.</p>
-      <p>Los dioses solian tener rasgos felinos.</p>
-      <p>Pero los egipcios no los adoraban como divinos. </p>
+      <p>Creian que estos tenian fertilidad,</p>
+        <p>rapidez y gracia.</p>
+      <p>Los dioses tenian rasgos felinos.</p>
+      <p>Pero los egipcios no los veian</p>
+        <p>ni adoraban como dioses.</p>
     </div>
     
 <img src="../images/cat1.jpg"  style="width: 99%; height: auto; max-width: 100%; max-height: 550px;">
