edit Especie más rara.html

--- a/pages/Especie más rara.html
+++ b/pages/Especie más rara.html
@@ -28,8 +28,9 @@
        </div>
 
        <div class="scrolling-text">
-       <p>Estos gatos son llamativos por sus orejas pequeñas</p>
-       <p>y plegadas hacia delante.</p>
+       <p>Estos gatos son llamativos por</p>
+        <p>sus orejas pequeñas</p>p>
+       <p>estando plegadas hacia delante.</p>
        </div>
 
 
