edit Templo Gotokuji.html

--- a/pages/Templo Gotokuji.html
+++ b/pages/Templo Gotokuji.html
@@ -24,9 +24,11 @@
        </ul>
 
        <div class="scrolling-text">
-         <p>El templo Gotokuji (豪徳寺) se considerada el lugar 
-         <p>donde surgio el amuleto "maneki-neko" en Tokio.</p>
-         <p>Los japoneses les tienen un gran respeto a estos.</p>
+         <p>El templo Gotokuji (豪徳寺) se</p>
+         <p>considerada el lugar en donde</p>
+         <p>surgio el amuleto "maneki-neko"(Tokio).</p>
+         <p>Los japoneses les tienen un gran</p>
+         <p>respeto a estos.</p>
        </div>
 
 <img src="../images/goto.jpg" style="width: 49%; height: auto; max-width: 100%; max-height: 440px;">
