--- a/pages/Templo Gotokuji.html
+++ b/pages/Templo Gotokuji.html
@@ -25,6 +25,7 @@
 
        <div class="scrolling-text">
          <p>El templo Gotokuji (豪徳寺) se</p>
+         <p>(Tokio)</p>
          <p>considerada el lugar en donde</p>
          <p>surgio el amuleto "maneki-neko"(Tokio).</p>
          <p>Los japoneses les tienen un gran</p>
