edit Especie más rara.html

--- a/pages/Especie más rara.html
+++ b/pages/Especie más rara.html
@@ -29,7 +29,7 @@
 
        <div class="scrolling-text">
        <p>Estos gatos son llamativos por</p>
-        <p>sus orejas pequeñas</p>p>
+       <p>sus orejas pequeñas</p>
        <p>estando plegadas hacia delante.</p>
        </div>
 
