--- a/pages/Razones para adoptar uno.html
+++ b/pages/Razones para adoptar uno.html
@@ -49,7 +49,7 @@
       </div>
     
       <div class="scrolling-text">
-        <p>6. Con un gato te sentiras menos solo.</p>
+        <p>6. Con un gato no te sentiras solo.</p>
       </div>
 
     
