edit Razones para adoptar uno.html

--- a/pages/Razones para adoptar uno.html
+++ b/pages/Razones para adoptar uno.html
@@ -54,7 +54,7 @@
 
     
       <div class="scrolling-text">
-<p>ADOPTA CON RESPONSABILIDAD!</p>
+         <p>ADOPTA CON RESPONSABILIDAD</p>
       </div>
 
 
